# ros2-vda5050-bridge

./: .gitignore  0922.txt  CLAUDE.md  README.md  adjust.md  cleanup_repo_v2.sh  demo_vda5050_usage.py  jindu.md  rizhi.txt  test.md  test_mqtt_basic.py  test_new_path_conversion.py  test_new_protocol_mqtt.py  test_new_protocol_types.py  test_path_conversion_simple.py  test_realtime_status_feedback.py  test_ros2_path_integration.py  test_tabs.sh  test_vda5050_system.py  test_vda5050_types.py  zl_mqtt_auto_start.sh  zmq_mqtt_start_unit.sh
config/: bridge_config.yaml
cpp_version/: BETA3_CODE_IMPROVEMENTS.md  CMakeLists.txt  README.md  README_test_record.md  build.sh  build_and_test.sh  check_dependencies.sh  launch_with_config.sh  package.xml  plans.txt  rebuild_with_config_info.sh  test_basic_build.sh  test_nav_path_publisher.py  test_real_path_conversion.cpp  test_real_path_fixed.sh
cpp_version/config/: bridge_config.yaml
cpp_version/launch/: bridge_launch.py  launch_with_config.sh
cpp_version/scripts/setup/: install_deps.sh
cpp_version/scripts/utils/: update_cmake_structure.sh
cpp_version/src/: main.cpp
cpp_version/src/include/: path_converter.hpp  ros2_zhongli_bridge.hpp  zhongli_protocol_types.hpp
cpp_version/src/lib/: CMakeLists.txt  path_converter.cpp  ros2_zhongli_bridge.cpp  zhongli_mqtt_client.cpp  zhongli_protocol_types.cpp
cpp_version/src/tests/: test_mqtt_publish.cpp  test_path_converter.cpp  test_real_plan_subscription.cpp
cpp_version/tests/: test_models.md
cpp_version/tests/cpp/: test_path_simple.cpp
cpp_version/tests/scripts/: PATH_POINT_LOGIC.md  danci2_test_nav_path_publisher.py  danci_test_nav_path_publisher copy.py  plan_filter_node.py  test_beta3_trajectory_workflow.py  test_container_pose_publisher.py  test_container_pose_workflow.py  test_fixed_stages.py  test_in_place_rotation.py  test_mosquitto_detect.sh  test_mqtt_task_sender.py  test_path_simple.sh  test_real_path.sh  test_real_path_fixed.sh  test_trajectory_result_monitor.py  test_trajectory_status_sender.py
docs/: PROJECT_STATUS.md  USAGE.md  beta3_changes.md  zmq_mqtt_start_simple.sh  zongjie.md
install/: local_setup.sh  setup.sh
install/ros2_zhongli_bridge_cpp/share/ament_index/resource_index/package_run_dependencies/: ros2_zhongli_bridge_cpp
install/ros2_zhongli_bridge_cpp/share/ament_index/resource_index/parent_prefix_path/: ros2_zhongli_bridge_cpp
install/ros2_zhongli_bridge_cpp/share/ros2_zhongli_bridge_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_zhongli_bridge_cpp/share/ros2_zhongli_bridge_cpp/cmake/: ros2_zhongli_bridge_cppConfig-version.cmake  ros2_zhongli_bridge_cppConfig.cmake
install/ros2_zhongli_bridge_cpp/share/ros2_zhongli_bridge_cpp/config/: bridge_config.yaml
install/ros2_zhongli_bridge_cpp/share/ros2_zhongli_bridge_cpp/environment/: ament_prefix_path.dsv  path.dsv
install/share/ros2_zhongli_bridge_cpp/: local_setup.sh
install/share/ros2_zhongli_bridge_cpp/config/: bridge_config.yaml
log/: latest_build
ros2_vda5050_bridge/: package.xml  setup.py
ros2_vda5050_bridge/config/: bridge_config.yaml
ros2_vda5050_bridge/launch/: bridge_launch.py
ros2_vda5050_bridge/ros2_vda5050_bridge/: __init__.py  map_publisher.py  mqtt_client.py  new_protocol_types.py  path_publisher.py  test_mqtt_client.py  vda5050_bridge.py  vda5050_types.py  zhongli_mqtt_client.py
scripts/setup/: fix_ros2_deps.sh
scripts/utils/: reorganize_project.sh
src/include/: path_converter.hpp  zhongli_mqtt_client.hpp
src/lib/: path_converter.cpp  zhongli_mqtt_client_dummy.cpp
src/tests/: CMakeLists.txt  test_zhongli_protocol_types.cpp
tests/planner/: ARCHITECTURE_SUMMARY.md  CLOSED_LOOP_TEST.md  COMPLEX_PLANNER_GUIDE.md  FINAL_TEST_GUIDE.md  GetTrajectoryStatus.srv  GoToPoseAsync.srv  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  README_COMPLEX_PLANNER.md  SERVICE_COMPARISON.md  TEST_COMPLEX_PLANNER.md  TEST_MODE_README.md  TEST_WITH_GOAL.md  TROUBLESHOOTING.md  diagnose_mqtt.py  example_async_service.py  example_complex_planner.py  mock_executor.py  publish_goal.py  publish_test_goal.py  publish_test_odom.py  query_trajectory_status.py  run_complex_planner_test.sh  scheduler_example.py  start_mqtt_bridge.sh  test_beta4_trajectory_workflow_goal.py  test_complex_planner_workflow.py  test_goal_connection.py  test_goto_service.py  test_goto_service_3.py  test_independent.md  test_independent.py  test_result.md  test_trajectory_planner.py  test_unload.py  trajectory_planner.py  unified_planner_workflow.py  快速测试步骤.md  简化测试步骤.md  (+3 more)
tests/planner/srv/: TrajectoryStatus.srv
tests/scripts/: BETA3_TEST_OUTPUT_EXAMPLE.md  GoToPose.srv  danci3_test_nav_path_publisher.py  mock_nav_goal_server.py  plan_dig.py  test_beta3_dynamic_workflow.py  test_beta3_simple.py  test_beta3_trajectory_srv_workflow.py  test_beta3_trajectory_workflow.py  test_beta3_trajectory_workflow_king.py  test_beta4_trajectory_workflow_goal.py  test_device_state_monitor.py  test_map_publisher.py  test_navigation_monitor.py  test_real_subscription.sh  test_remote_device_format.py  test_task_status_monitor.py
tests/scripts/install/: local_setup.sh  setup.sh
tests/scripts/log/: latest_build
tests/scripts/nav_service_integration/: README.md  TrajectoryComplete.srv
